css/my.css
.jumbotron{
	margin-bottom:0;
	position:relative;
	font-size:16px;
	color:#fff;
	color:rgba(255,255,255,0.75);
	text-align:center;
	border-radius:0;
	padding-top:25px;
	padding-bottom:25px;
	background-image:-webkit-linear-gradient(left, #003973 0, #e5e5be 100%);
	background-image:-o-linear-gradient(left, #003973 0, #e5e5be 100%);
	background-image:linear-gradient(to right, #003973 0, #e5e5be 100%);
	background-repeat:repeat-x;
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff003973', endColorstr='#ffe5e5be', GradientType=1)
}

.jumbotron h1{
  margin-bottom:12px;
  font-weight:300;
  letter-spacing:-0.3px;
  color:#fff
}

footer{
	min-width:100%;
  max-width:100%;
  color:#fff;
	text-align:center;
	opacity:.8;
	padding:50px;
	background-image:-webkit-linear-gradient(left, #003973 0, #e5e5be 100%);
	background-image:-o-linear-gradient(left, #003973 0, #e5e5be 100%);
	background-image:linear-gradient(to right, #003973 0, #e5e5be 100%);
	background-repeat:repeat-x;
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff003973', endColorstr='#ffe5e5be', GradientType=1)
}

:root {
  --jumbotron-padding-y: 3rem;
}

.jumbotron p:last-child {
  margin-bottom: 0;
}

.jumbotron-heading {
  font-weight: 300;
}

.jumbotron .container {
  max-width: 40rem;
}

.box-shadow { 
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); 
}

.navbar {
  margin-bottom:0;
}

.fa-github {
  margin: 0 0 0;
  color: #00cdcd;
  font-size: 1.9em;
  transition: .3s ease-in-out;
}

.fa-github:hover {
  color: yellow;
}

.fa-file {
  margin: 0 0 0;
  color: #00cdcd;
  font-size: 1.9em;
  transition: .3s ease-in-out;
}

.fa-file:hover {
  color: yellow;
}

.fa-envelope {
  margin: 0 0 0;
  color: #00cdcd;
  font-size: 1.9em;
  transition: .3s ease-in-out;
}

.fa-envelope:hover {
  color: yellow;
}

.font-italic {
  font-size: 1.2em;
  color: #000000;
}

.meee {
  	text-align: center;
  	margin-bottom: .3rem;
}

.featurette-divider {
  margin: 3.5rem 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -.05rem;
}

@media (min-width: 40em) {
  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 62em) {
  .featurette-heading {
    margin-top: 2.5rem;
  }
}

